--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -11,7 +11,7 @@
 
 <%= user_fb_picture(@quest.user, 'square', :class=>' avatar fleft') %>
 </p>
-
+  <p><%= @quest.bounty %></p>
   <p class="qtitle"><%= @quest.title %> </p>
   <span>in  <%= @quest.city.name %> </span>
 
