update quest show page

--- a/app/views/quest_entries/show.html.erb
+++ b/app/views/quest_entries/show.html.erb
@@ -22,7 +22,7 @@
     </p>
   <% end %>
 
-<%= link_to 'Back', @quest_entry.path %>
+<%= link_to 'Back', @quest_entry.quest %>
 
 <article>
   <span id="status">loading...</span>
