--- a/app/views/quest_entries/show.html.erb
+++ b/app/views/quest_entries/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <b>Venue:</b>
+  <%= @quest_entry.venue %>
+</p>
+
+<p>
   <b>Votes count:</b>
   <%= @quest_entry.votes_count %>
 </p>
