--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -1,7 +1,7 @@
 <div class="topbar">
   <%= link_to_function "Back", "history.back()", :class=>"topbar-btn topbar-back fleft" %>
   <span class="toplogo">Qwest</span>
-  <%= link_to 'X','#', :class=>"topbar-btn topbar-back fright" %>
+  <%= link_to 'Submit',new_quest_entry_path(:quest_id => @quest.id), :class=>"topbar-btn topbar-back fright" %>
   <div class="clear"></div>
 </div>
 <div id="questshow">
