--- a/app/views/pages/_landing.html.erb
+++ b/app/views/pages/_landing.html.erb
@@ -5,7 +5,7 @@
 
 
   <div class="user_pin_info topbar">
-    <%= user_fb_picture(current_user, 'square', :class=>' avatar fleft') %>
+    <%= link_to user_fb_picture(current_user, 'square', :class => ' avatar fleft'), current_user %>
     <p><%= current_user.name %></p>
     <span class="meta-text">Petaling Jaya, Selangor (<%= link_to 'Logout', signout_path %>)</span>
   </div>
