--- a/public/stylesheets/questentry.css
+++ b/public/stylesheets/questentry.css
@@ -22,3 +22,28 @@ box-shadow:0px 1px 3px #333;
 	color:#000;
 	font-size:20px;
 }
+
+
+.newqe .padded{
+	padding:10px 20px;
+ }
+
+.newqe .qtitle{
+	font-size:18px;
+}
+.newqe label{
+	margin:0 0 5px;
+	float:left;
+	display:block;
+}
+.newqe textarea.nofield{
+ 	width:100%;
+	border:1px solid #fff;
+	-webkit-appearance:none;
+}
+.newqe textarea#quest_entry_submission{
+	width:95%;
+	height:60px;
+	-webkit-appearance:none;
+
+}
