--- a/public/stylesheets/newquest.css
+++ b/public/stylesheets/newquest.css
@@ -27,6 +27,14 @@ border-radius: 0 0 4px 4px;
 .new_quest{
 
 }
+.newqe{
+	padding-bottom:10px;
+box-shadow:0px 1px 3px #333;
+-moz-box-shadow:0px 1px 3px #333;
+-webkit-box-shadow:0px 1px 3px #333;
+position:relative;
+z-index:9999;
+}
 div.field{
 	margin:0;
 
@@ -48,7 +56,7 @@ div.field{
 	display:block;
 }
 textarea#quest_title{
-	width:93%;
+	width:93%;font-size:15px;
 	height:60px;
 	padding:13px 10px 10px;
 	border:0;
