--- a/app/views/quest_entries/show.html.erb
+++ b/app/views/quest_entries/show.html.erb
@@ -8,7 +8,7 @@
 
 <div class="questentry">
 
- <%= user_fb_picture(@quest_entry.user, 'square', :class=>' avatar fleft') %>
+ <%= link_to user_fb_picture(@quest_entry.user, 'square', :class=>' avatar fleft'), @quest_entry.user %>
 <p>
   <%= @quest_entry.user.name %><br />
   <%= @quest_entry.user.cp %> points
