--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -13,13 +13,14 @@
 </p>
   <p><%= @quest.bounty unless @quest.bounty == 0 %></p>
   <p class="qtitle"><%= @quest.title %> </p>
-  <p>in  <%= @quest.city.name %>  &bull; <%= distance_of_time_in_words(Time.now, @quest.expired_at) %> left &bull; <%= @quest.votes_count %> votes  </p>
+  <p>in  <%= @quest.city.name %>  &bull; <%= distance_of_time_in_words(Time.now, @quest.expired_at) %> left  </p>
 <br />
 <% if logged_in? && !current_user.voted?(@quest) %>
 
  <p>
   <%= link_to '+', votes_path('vote[user_id]' => current_user.id, 'vote[votable_id]' => @quest.id, 'vote[votable_type]' => 'Quest', 'vote[vote]' => 1),:class=>"vote voteup", :method => :post %>
   <%= link_to '-', votes_path('vote[user_id]' => current_user.id, 'vote[votable_id]' => @quest.id, 'vote[votable_type]' => 'Quest', 'vote[vote]' => -1),:class=>"vote votedown", :method => :post %>
+  <%= @quest.votes_count %> votes
 </p>
 <% end %>
 <div class="clear"></div>
