--- a/public/stylesheets/questentry.css
+++ b/public/stylesheets/questentry.css
@@ -9,6 +9,7 @@
 	background:#eee;
 	position:relative;
 	z-index:9999;
+	overflow:hidden;
 box-shadow:0px 1px 3px #333;
 -moz-box-shadow:0px 1px 3px #333;
 -webkit-box-shadow:0px 1px 3px #333;
@@ -22,7 +23,29 @@ box-shadow:0px 1px 3px #333;
 	color:#000;
 	font-size:20px;
 }
-
+.qe_vote   a.vote{
+	font-size:11px;
+	background:#5C6573;
+	padding:8px 7px;
+	width:20px;
+	float:left;
+ 	display:block;
+	margin :-3px 10px 0 0;
+text-align:center;
+font-weight:bold;
+	text-decoration:none;
+	background:#fff;
+	text-indent:-9999px;
+	border-radius: 4px;
+-moz-border-radius: 4px;
+-webkit-border-radius: 4px;
+}
+.qe_vote   a.voteup{
+background:#5C6573  url('/images/voteup.png') no-repeat center;
+}
+.qe_vote   a.votedown{
+background: #5C6573 url('/images/votedown.png') no-repeat center;
+}
 
 .newqe .padded{
 	padding:10px 20px;
