--- a/public/stylesheets/showquest.css
+++ b/public/stylesheets/showquest.css
@@ -59,7 +59,7 @@ border-radius: 4px;
 }
 #questshow .entries li a{
 	text-decoration:none;
-	padding:10px 10px;
+	padding:15px 10px;
 	display:block;
 	color:#000;
 }
@@ -87,14 +87,24 @@ border-radius: 4px;
 
 #questshow   a.vote{
 	font-size:11px;
-	background:#eee;
-	padding:5px 4px;
+	background:#5C6573;
+	padding:8px 7px;
 	width:20px;
 	float:left;
  	display:block;
-	margin-right:4px;
+	margin :-3px 10px 0 0;
 text-align:center;
 font-weight:bold;
 	text-decoration:none;
 	background:#fff;
+	text-indent:-9999px;
+	border-radius: 4px;
+-moz-border-radius: 4px;
+-webkit-border-radius: 4px;
+}
+#questshow   a.voteup{
+background:#5C6573  url('/images/voteup.png') no-repeat center;
+}
+#questshow   a.votedown{
+background: #5C6573 url('/images/votedown.png') no-repeat center;
 }
