--- a/public/stylesheets/quests.css
+++ b/public/stylesheets/quests.css
@@ -40,7 +40,7 @@
 .quest-list li a {
 	text-decoration: none;
 	font-weight: bold;
-	color: #3FA9F5;
+	color: #0B84DA;
 	display: block;
 	font-size: 17px;
 }
