--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -11,9 +11,8 @@
 
 <%= link_to user_fb_picture(@quest.user, 'square', :class=>' avatar fleft'), @quest.user %>
 </p>
-  <p><%= @quest.bounty unless @quest.bounty == 0 %></p>
   <p class="qtitle"><%= @quest.title %> </p>
-  <p>in  <%= @quest.city.name %>  &bull; <%= distance_of_time_in_words(Time.now, @quest.expired_at) %> left  </p>
+  <p>in <%= @quest.city.name %> &bull; <%= distance_of_time_in_words(Time.now, @quest.expired_at) %> left <%= "● #{@quest.bounty} bounty" unless @quest.bounty == 0 %></p>
 <br />
 <% if logged_in? && !current_user.voted?(@quest) %>
 
