--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -1,5 +1,5 @@
 <div class="topbar">
-  <%= link_to_function "Back", "history.back()", :class=>"topbar-btn topbar-back fleft" %>
+  <%= link_to_function "Back", "javascript:history.go(-1)", :class=>"topbar-btn topbar-back fleft" %>
   <span class="toplogo"><%= link_to 'Qwest', root_path %></span>
   <%= link_to 'Submit',new_quest_entry_path(:quest_id => @quest.id), :class=>"topbar-btn topbar-back fright" %>
   <div class="clear"></div>
@@ -8,8 +8,7 @@
 <div class="questcard">
 <div class="innerpad">
 <p>
-
-<%= link_to user_fb_picture(@quest.user, 'square', :class=>' avatar fleft'), @quest.user %>
+<%= link_to user_fb_picture(@quest.user, 'square', :class => ' avatar fleft'), @quest.user %>
 </p>
   <p class="qtitle"><%= @quest.title %> </p>
   <p>in <%= @quest.city.name %> &bull; <%= distance_of_time_in_words(Time.now, @quest.expired_at) %> left <%= "● #{@quest.bounty} bounty" unless @quest.bounty == 0 %></p>
@@ -49,10 +48,9 @@
 
 <div class="entries">
 <ul>
- <% @quest.quest_entries.each do |entry| %>
+ <% @quest.quest_entries.order("votes_count DESC").each do |entry| %>
    <li>
         <%= link_to(entry) do %>
-
 
    <%= user_fb_picture(entry.user, 'square', :class=>' avatar fleft') %>
   <div class="entry_info">
