--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -18,7 +18,7 @@
             <%= quest.bounty unless quest.bounty == 0 %>
             <%= quest.title %><br />
             <span>At <%= quest.city.name %> by <%= quest.user.username %></span><br />
-            <strong><%= distance_of_time_in_words(Time.now, quest.expired_at) %> left</strong>
+            <strong><%= distance_of_time_in_words(Time.now, quest.expired_at) %> left &bull; <%= quest.votes_count %> votes &bull;  <%= quest.quest_entries.count %> entries</strong>
     	  <% end %>
         </li>
       <% end %>
