--- a/app/views/pages/_welcome.html.erb
+++ b/app/views/pages/_welcome.html.erb
@@ -1,5 +1,6 @@
 <div id="splashpage">
 <h1 class="splash_logo"><%= image_tag("qwest-logo.png") %></h1>
+<h3 class="tagline">life is an adventure</h3>
 <div class="splash_fb">
 	<% if logged_in? %>
 		<%= link_to user_fb_picture(current_user, 'square', :class => 'avatar'), current_user %>
