--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -15,7 +15,9 @@
       <% @popular_quests.each do |quest| %>
         <li>
     	  <%= link_to(quest_path(quest)) do %>
-            <%= quest.bounty unless quest.bounty == 0 %>
+        <% if quest.bounty && quest.bounty > 0 %>
+            <span class="bounty"> CP <%= quest.bounty %> </span>
+         <% end %>
             <%= quest.title %><br />
             <span>At <%= quest.city.name %> by <%= quest.user.username %></span><br />
             <strong><%= distance_of_time_in_words(Time.now, quest.expired_at) %> left &bull; <%= quest.votes_count %> votes &bull;  <%= quest.quest_entries.count %> entries</strong>
