--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -12,7 +12,8 @@
 <%= link_to user_fb_picture(@quest.user, 'square', :class => ' avatar fleft'), @quest.user %>
 </p>
   <p class="qtitle"><%= @quest.title %> </p>
-  <p>in <%= @quest.city.name %> &bull; <%= distance_of_time_in_words(Time.now, @quest.expired_at) %> left &bull; <%= " #{@quest.bounty} bounty" unless @quest.bounty == 0 %></p>
+  <p>in <%= @quest.city.name %> &bull; <%= distance_of_time_in_words(Time.now, @quest.expired_at) %> left  </p>
+  <p><%= " #{@quest.bounty} bounty" unless @quest.bounty == 0 %></p>
 <br />
  <p>
 <% if logged_in? && !current_user.voted?(@quest) %>
