--- a/public/stylesheets/showquest.css
+++ b/public/stylesheets/showquest.css
@@ -88,11 +88,11 @@ border-radius: 4px;
 #questshow   a.vote{
 	font-size:11px;
 	background:#5C6573;
-	padding:8px 7px;
+	padding:7px 7px 5px;
 	width:20px;
 	float:left;
  	display:block;
-	margin :-3px 10px 0 0;
+	margin :-5px 3px 0 0;
 text-align:center;
 font-weight:bold;
 	text-decoration:none;
