--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="topbar">
   <%= link_to 'Back','javascript:history.go(-1)', :class => "topbar-btn topbar-back fleft" %>
   <span class="toplogo"><%= link_to 'Qwest', root_path %></span>
-  <%= link_to 'Edit', '#' , :class => "topbar-btn topbar-edit fright" %>
+  <%= link_to 'Ranking', users_path , :class => "topbar-btn topbar-edit fright" %>
 </div>
 
 <div class="profile-page">
