--- a/app/views/quests/new.html.erb
+++ b/app/views/quests/new.html.erb
@@ -1,5 +1,5 @@
 <div class="topbar">
-	<%= link_to_function "Back", "history.back()", :class=>"topbar-btn topbar-back fleft" %>
+	<%= link_to "Back", quests_path, :class=>"topbar-btn topbar-back fleft" %>
 	<span class="toplogo"><%= link_to 'Qwest', root_path %></span>
  	<div class="clear"></div>
 </div>
