--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -1,6 +1,5 @@
-
 <div class="topbar">
-  <%= link_to_function "Back", "javascript:history.go(-1)", :class=>"topbar-btn topbar-back fleft" %>
+  <%= link_to "Back", quests_path, :class=>"topbar-btn topbar-back fleft" %>
   <span class="toplogo"><%= link_to 'Qwest', root_path %></span>
   <%= link_to 'Submit',new_quest_entry_path(:quest_id => @quest.id), :class=>"topbar-btn topbar-back fright" %>
   <div class="clear"></div>
