--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class="topbar clearfix">
-  <%= link_to_function "Back", "history.back()", :class=>"topbar-btn topbar-back fleft" %>
+  <%= link_to "Back", root_path, :class=>"topbar-btn topbar-back fleft" %>
   <span class="toplogo"><%= link_to 'Qwest', root_path %></span>
 </div>
 
